--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,22 +17,24 @@
         app:civ_border_width="2dp" />
 
     <TextView
-        android:id="@+id/greet_txtVw"
+        android:id="@+id/homeA_greet_txtVw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/homeA_dp_imgVw"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
+        android:fontFamily="sans-serif-condensed"
         android:text="Good Morning"
         android:textColor="@color/blue_A700"
         android:textSize="24sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/profile_name_txtVw"
+        android:id="@+id/homeA_profile_name_txtVw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/greet_txtVw"
+        android:layout_below="@id/homeA_greet_txtVw"
+        android:fontFamily="sans-serif-condensed"
         android:text="Rocktim Sharma"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -56,6 +58,7 @@
             android:paddingTop="20dp">
 
             <LinearLayout
+                android:id="@+id/homeA_test_imgVw"
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:layout_gravity="center"
@@ -65,7 +68,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView2"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/icon_medical_services_24" />
@@ -79,6 +82,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/homeA_doc_imgVw"
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:layout_marginLeft="10dp"
@@ -87,7 +91,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/icon_person_24" />
@@ -116,6 +120,7 @@
 
 
             <LinearLayout
+                android:id="@+id/homeA_record_imgVw"
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:layout_gravity="center"
@@ -140,6 +145,7 @@
 
 
             <LinearLayout
+                android:id="@+id/homeA_medication_imgVw"
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:layout_marginLeft="10dp"
