--- a/app/src/main/res/layout/activity_file_manager.xml
+++ b/app/src/main/res/layout/activity_file_manager.xml
@@ -24,8 +24,16 @@
             tools:context=".FileManager">
 
             <androidx.appcompat.widget.SearchView
-                android:layout_width="0dp"
+                android:id="@+id/activity_file_search_view"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/outlined_rectangle"
+                app:queryHint="Search here ......" />
 
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -41,7 +49,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/file_manager_rcyVw"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_below="@id/activity_file_search_view" />
 
 
         </RelativeLayout>
