--- a/app/src/main/res/layout/fragment_2.xml
+++ b/app/src/main/res/layout/fragment_2.xml
@@ -219,16 +219,16 @@
                     android:textStyle="bold" />
 
                 <RadioGroup
-                    android:id="@+id/blood_p_grp"
+                    android:id="@+id/frg2_bp_radiogp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:orientation="horizontal">
 
                     <RadioButton
                         android:id="@+id/frag2_bp_low_radio"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
+                        android:layout_weight="1"
                         android:text="Low" />
 
                     <RadioButton
@@ -236,6 +236,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
                         android:layout_marginBottom="16dp"
+                        android:layout_weight="1"
                         android:text="High" />
 
                     <RadioButton
@@ -257,7 +258,7 @@
                     android:textStyle="bold" />
 
                 <RadioGroup
-                    android:id="@+id/sugar_grp"
+                    android:id="@+id/frg2_sugar_radiogp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
@@ -269,6 +270,7 @@
                         android:layout_marginBottom="16dp"
                         android:layout_weight="1"
                         android:text="Yes" />
+
                     <RadioButton
                         android:id="@+id/frag2_sgr_no_radio"
                         android:layout_width="174dp"
@@ -292,7 +294,7 @@
                     android:text="Are you vacinated"
                     android:textStyle="bold" />
                 <RadioGroup
-                    android:id="@+id/vac_grp"
+                    android:id="@+id/frg2_vaccine_radiogp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
