--- a/app/src/main/res/layout/fragment_2.xml
+++ b/app/src/main/res/layout/fragment_2.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/frag2_back_imBtn"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:scrollbars="none">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -202,7 +203,7 @@
                     android:id="@+id/spinner_blood"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="338dp"
+                    android:layout_marginBottom="5dp"
                     android:spinnerMode="dropdown"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -222,26 +223,27 @@
                     android:id="@+id/frg2_bp_radiogp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="3"
                     android:orientation="horizontal">
 
                     <RadioButton
                         android:id="@+id/frag2_bp_low_radio"
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Low" />
 
                     <RadioButton
                         android:id="@+id/frag2_bp_heigh_radio"
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:layout_weight="1"
                         android:text="High" />
 
                     <RadioButton
                         android:id="@+id/frag2_bp_normal_radio"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:checked="true"
@@ -261,31 +263,33 @@
                     android:id="@+id/frg2_sugar_radiogp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="3"
                     android:orientation="horizontal">
 
                     <RadioButton
                         android:id="@+id/frag2_sgr_yes_radio"
-                        android:layout_width="174dp"
-                        android:layout_height="40dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:layout_weight="1"
                         android:text="Yes" />
 
                     <RadioButton
                         android:id="@+id/frag2_sgr_no_radio"
-                        android:layout_width="174dp"
-                        android:layout_height="40dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="No" />
 
                     <RadioButton
                         android:id="@+id/frag2_sgr_normal_radio"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:checked="true"
                         android:text="normal" />
                 </RadioGroup>
+
                 <TextView
                     android:id="@+id/textView17"
                     android:layout_width="match_parent"
@@ -293,26 +297,31 @@
                     android:fontFamily="sans-serif-condensed"
                     android:text="Are you vacinated"
                     android:textStyle="bold" />
+
                 <RadioGroup
                     android:id="@+id/frg2_vaccine_radiogp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="2"
                     android:orientation="horizontal">
+
                     <RadioButton
                         android:id="@+id/frag2_vac_yes_radio"
-                        android:layout_width="174dp"
-                        android:layout_height="40dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:layout_weight="1"
                         android:text="Yes" />
+
                     <RadioButton
                         android:id="@+id/frag2_vac_no_radio"
-                        android:layout_width="174dp"
-                        android:layout_height="40dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="No" />
                 </RadioGroup>
             </LinearLayout>
+
             <Button
                 android:id="@+id/frag2_next_btn"
                 android:layout_width="wrap_content"
